FIX: Fixed an issue with the overflow selector when a popover opens

--- a/frontend/src/assets/styles/cmps/_popover.scss
+++ b/frontend/src/assets/styles/cmps/_popover.scss
@@ -6,14 +6,10 @@
   border-radius: 8px;
   max-width: 304px;
   z-index: 1000;
-  position: absolute;
 
   @include for-wide-layout {
     width: 304px;
   }
-
-  overflow: hidden;
-  overflow-y: auto;
 }
 
 .popover-backdrop {
@@ -22,5 +18,4 @@
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
